    of <len> bytes at <addr>. Below the validity bits, the byte
    values are shown using a layout similar to the GDB command
    'x /<len>xb <addr>'. The monitor command 'xb' is easier to use than
    get_vbits (in particular on little endian computers) when you need to
    associate byte data value with their corresponding validity bits.

* Massif:
  - New monitor command 'all_snapshots <filename>' that dumps all snapshots
    taken so far.

* Helgrind:
  - The default value for --conflict-cache-size=N has been doubled to 2000000.
    Users that were not using the default value should preferrably also
    double the value they give. 
    The default was updaded due to the changes in the full history
    implementation. Doubling the value gives in average a slightly more
    complete history and uses similar memory (or significantly less memory
    in the worst case) than the previous Helgrind version.
    
  - Significant memory improvement and moderate speed improvement for
    --history-level=full for applications accessing a lot of memory with
    many different stacktraces.

  - The helgrind monitor command 'info locks' now accepts an optional
    argument 'lock_addr', to only show information about the lock at the
    given address.

  - When using --history-level=full, the new helgrind monitor command
    'accesshistory <addr> [<len>]' will show the recorded accesses for
    <len> (or 1) bytes at <addr>.

* Callgrind:

* ==================== OTHER CHANGES ====================

* The command line options --db-attach and --db-command have been removed.
  They were deprecated in 3.10.0

* When a process dies due to a signal, Valgrind now shows the signal
  and the stacktrace at default verbosity (i.e. verbosity 1).

* Address description logic (used by memcheck and helgrind)
  now describes addresses in anonymous segments, file mmap-ed
  segments, shared memory segments and the brk data segment.

* Option --error-markers=<begin>,<end> can be used to mark